# why

./: .gitignore  .why.toml.example  AGENTS.md  Cargo.toml  PLAN-claude.md  PLAN.md  POC.md  README.md  install.sh  plan-codex.md
.beads/: issues.jsonl
.beads/.br_history/: issues.20260311_140108.jsonl  issues.20260312_094252.jsonl  issues.20260312_121832.jsonl  issues.20260312_122816.jsonl  issues.20260312_125515.jsonl  issues.20260312_130610.jsonl  issues.20260313_001558.jsonl  issues.20260313_134045.jsonl  issues.20260313_140124.jsonl  issues.20260313_141625.jsonl  issues.20260313_142139.jsonl  issues.20260313_144127.jsonl  issues.20260313_144902.jsonl  issues.20260313_145157.jsonl  issues.20260313_145526.jsonl  issues.20260313_145551.jsonl  issues.20260313_145927.jsonl  issues.20260313_150943.jsonl  issues.20260313_151300.jsonl  issues.20260313_152117.jsonl  issues.20260313_152625.jsonl  issues.20260313_162813.jsonl  issues.20260313_164257.jsonl  issues.20260313_165351.jsonl  issues.20260313_165537.jsonl  issues.20260313_170117.jsonl  issues.20260313_174916.jsonl  issues.20260313_180231.jsonl  issues.20260313_180851.jsonl  issues.20260313_181707.jsonl  issues.20260313_181843.jsonl  issues.20260313_222720.jsonl  issues.20260314_001547.jsonl  issues.20260314_001810.jsonl  issues.20260314_002234.jsonl  issues.20260314_010205.jsonl  issues.20260314_011149.jsonl  issues.20260314_011351.jsonl  issues.20260314_014631.jsonl  issues.20260314_053550.jsonl  (+22 more)
.claude/hooks/: on-file-write.sh
.github/: health-baseline.json
.github/workflows/: bench.yml  ci.yml  release.yml  why-diff.yml
benches/: archaeology_bench.rs  cache_bench.rs  scanner_bench.rs
crates/annotator/: Cargo.toml
crates/annotator/src/: lib.rs  writer.rs
crates/archaeologist/: Cargo.toml
crates/archaeologist/src/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  store.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: cli.rs  main.rs
crates/evidence/: Cargo.toml
crates/evidence/src/: lib.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: context_inject.rs  installer.rs  lib.rs
crates/locator/: Cargo.toml
crates/locator/src/: finder.rs  languages.rs  lib.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/question-engine/: Cargo.toml
crates/question-engine/src/: lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: coupling.rs  coverage_gap.rs  ghost.rs  health.rs  hotspots.rs  lib.rs  onboard.rs  outage.rs  pr_template.rs  rename_safe.rs  time_bombs.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs
crates/splitter/: Cargo.toml
crates/splitter/src/: lib.rs
crates/synthesizer/: Cargo.toml
crates/synthesizer/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: bench_fixtures.rs  lib.rs
crates/workflows/: Cargo.toml
crates/workflows/src/: lib.rs
docs/: mcp-setup.md
poc/: index.js  package.json
src/: lib.rs
tests/: integration_cli.rs  integration_hooks_annotator.rs  integration_mcp.rs  integration_real_repo_cli.rs
tests/common/: mod.rs
tests/fixtures/compat_shim_repo/: setup.sh
tests/fixtures/config/: high-risk.toml
tests/fixtures/coupling_repo/: setup.sh
tests/fixtures/coupling_rich_repo/: setup.sh
tests/fixtures/ghost_repo/: setup.sh
tests/fixtures/hotfix_repo/: setup.sh
tests/fixtures/javascript_repo/: setup.sh
tests/fixtures/outage_repo/: setup.sh
tests/fixtures/python_repo/: setup.sh
tests/fixtures/rename_safe_repo/: setup.sh
tests/fixtures/sparse_repo/: setup.sh
tests/fixtures/split_repo/: setup.sh
tests/fixtures/timebomb_repo/: setup.sh
tests/fixtures/timebomb_rich_repo/: setup.sh
tests/fixtures/typescript_repo/: setup.sh
tests/golden/: cli_blame_chain_hotfix_repo.txt  cli_coupling_coupling_rich_repo.txt  cli_evolution_hotfix_repo.json  cli_evolution_hotfix_repo.txt  cli_explain_outage_outage_repo.txt  cli_ghost_ghost_repo.txt  cli_health_timebomb_repo.txt  cli_hotspots_hotfix_repo.json  cli_hotspots_hotfix_repo.txt  cli_pr_template_hotfix_repo.json  cli_pr_template_hotfix_repo.txt  cli_split_no_split_hotfix_repo.txt  cli_split_positive_split_repo.txt  cli_team_hotfix_repo.txt  cli_time_bombs_timebomb_rich_repo.txt  cli_why_hotfix_repo.json  cli_why_hotfix_repo.txt  mcp_why_coupling_coupling_repo.json  mcp_why_coupling_coupling_rich_repo.json  mcp_why_rename_safe_rename_safe_repo.json  mcp_why_split_split_repo.json  mcp_why_symbol_hotfix_repo.json  mcp_why_time_bombs_timebomb_repo.json  mcp_why_time_bombs_timebomb_rich_repo.json
tests/unit/: archaeologist.rs  cache.rs  context.rs  evidence.rs  locator.rs  mod.rs  synthesizer.rs
workflows/: design-intent-lookup.md  regression-context-gathering.md  root-cause-archaeology.md
