[workspace]
members = [
    ".",
    "crates/core",
    "crates/archaeologist",
    "crates/locator",
    "crates/context",
    "crates/evidence",
    "crates/synthesizer",
    "crates/scanner",
    "crates/annotator",
    "crates/splitter",
    "crates/mcp",
    "crates/lsp",
    "crates/shell",
    "crates/hooks",
    "crates/cache",
    "crates/test-support",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["why contributors"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
git2 = { version = "0.18", default-features = false, features = ["vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
time = { version = "0.3", features = ["formatting"] }
thiserror = "1"
tree-sitter = "0.22"
tree-sitter-go = "0.21"
tree-sitter-java = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
rustyline = { version = "14", features = ["derive"] }
walkdir = "2"
dirs = "5"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20"

[package]
name = "why-workspace"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dev-dependencies]
anyhow.workspace = true
criterion = "0.5"
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
why-annotator = { path = "crates/annotator" }
why-archaeologist = { path = "crates/archaeologist" }
why-cache = { path = "crates/cache" }
why-hooks = { path = "crates/hooks" }
why-locator = { path = "crates/locator" }
why-scanner = { path = "crates/scanner" }

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "archaeology_bench"
harness = false

[[bench]]
name = "scanner_bench"
harness = false
