[package]
name = "why-annotator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
why-archaeologist = { path = "../archaeologist" }

[dev-dependencies]
tempfile = "3"
why-locator = { path = "../locator" }
