[package]
name = "why-context"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
git2.workspace = true
serde.workspace = true
toml = "0.8"

[dev-dependencies]
tempfile = "3"
