[package]
name = "why-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Ask your codebase why a function, file, or line exists using git history and optional LLM synthesis"
repository = "https://github.com/quangdang46/why"
homepage = "https://github.com/quangdang46/why"
documentation = "https://github.com/quangdang46/why#readme"
readme = "../../README.md"
keywords = ["git", "cli", "history", "analysis", "llm"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[[bin]]
name = "why"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
git2.workspace = true
serde.workspace = true
serde_json.workspace = true
why-archaeologist = { path = "../archaeologist" }
why-annotator = { path = "../annotator" }
why-cache = { path = "../cache" }
why-context = { path = "../context" }
why-locator = { path = "../locator" }
why-mcp = { path = "../mcp" }
why-scanner = { path = "../scanner" }
why-splitter = { path = "../splitter" }
why-synthesizer = { path = "../synthesizer" }
why-evidence = { path = "../evidence" }
why-hooks = { path = "../hooks" }
why-shell = { path = "../shell" }
why-lsp = { path = "../lsp" }
tokio.workspace = true
time = { workspace = true, features = ["macros", "parsing"] }
