[package]
name = "why-lsp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
why-archaeologist = { path = "../archaeologist" }
why-context = { path = "../context" }
why-locator = { path = "../locator" }
why-question-engine = { path = "../question-engine" }

[dev-dependencies]
tempfile = "3"
why-evidence = { path = "../evidence" }
why-synthesizer = { path = "../synthesizer" }
