[package]
name = "why-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
why-archaeologist = { path = "../archaeologist" }
why-locator = { path = "../locator" }
why-scanner = { path = "../scanner" }
why-splitter = { path = "../splitter" }
