[package]
name = "why-question-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
git2.workspace = true
serde.workspace = true
serde_json.workspace = true
why-archaeologist = { path = "../archaeologist" }
why-cache = { path = "../cache" }
why-context = { path = "../context" }
why-evidence = { path = "../evidence" }
why-locator = { path = "../locator" }
why-synthesizer = { path = "../synthesizer" }

[dev-dependencies]
tempfile = "3"
