[package]
name = "why-scanner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
git2.workspace = true
serde.workspace = true
time.workspace = true

[dev-dependencies]
tempfile = "3"
