[package]
name = "why-scanner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
git2.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
why-archaeologist = { path = "../archaeologist" }
why-context = { path = "../context" }
why-locator = { path = "../locator" }

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
