[package]
name = "why-shell"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
dirs.workspace = true
rustyline.workspace = true
walkdir.workspace = true
why-locator = { path = "../locator" }
