[package]
name = "why-synthesizer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
why-evidence = { path = "../evidence" }
why-context = { path = "../context" }
